--- a/ionics/www/templates/shopPage.html
+++ b/ionics/www/templates/shopPage.html
@@ -15,21 +15,25 @@
           <ion-slide-box slider-pager on-slide-changed="slideHasChanged($index)" show-pager="true" auto-play="true" does-continue="true">
             <ion-slide>
               <label>
-                <center><img src="img/souvenir.jpg" alt="what image shows" height="300" width="200"></center>
+                <center><img src="img/home1.jpeg" alt="what image shows" height="300" width="200"></center>
               </label>
             </ion-slide>
+
             <ion-slide>
-              <!--                                <ion-content><center><img src="img/james.jpg" alt="what image shows" height="150" width="200"></center></ion-content>-->
               <label>
-                <center><img src="img/souvenir_2.jpg" alt="what image shows" height="300" width="200"></center>
+                <center><img src="img/home2.jpeg" alt="what image shows" height="300" width="200"></center>
               </label>
             </ion-slide>
+
             <ion-slide>
-              <!--                                                <ion-content><center><img src="img/james.jpg" alt="what image shows" height="150" width="200"></center></ion-content>-->
               <label>
-                <center><img src="img/souvenir_3.jpg" alt="what image shows" height="300" width="200"></center>
+                <center><img src="img/dictionary.jpeg" alt="what image shows" height="300" width="200"></center>
               </label>
             </ion-slide>
+           
+
+
+
           </ion-slide-box>
           <ion-item>
             <div>
