--- a/ionics/www/templates/home.html
+++ b/ionics/www/templates/home.html
@@ -5,23 +5,15 @@
     </center>
 
     <ion-slide-box slider-pager on-slide-changed="slideHasChanged($index)" show-pager="true" auto-play="true" does-continue="true">
-      <ion-slide>
-        <label>
-                    <center><img src="img/home1.jpeg" alt="what image shows" height="300" width="200"></center>
-                </label>
-      </ion-slide>
 
-      <ion-slide>
+      <ion-slide ng-repeat="poster in posters">
         <label>
-          <center><img src="img/home2.jpeg" alt="what image shows" height="300" width="200"></center>
+          <center><img src="{{poster.imagPath}}" alt="what image shows" height="300" width="200"></center>
         </label>
       </ion-slide>
 
-      <ion-slide>
-        <label>
-          <center><img src="img/dictionary.jpeg" alt="what image shows" height="300" width="200"></center>
-        </label>
-      </ion-slide>
+
+      
 
     </ion-slide-box>
 
@@ -37,7 +29,7 @@
 
     <ion-list>
       <ion-item ng-repeat="news in newsList" href="#/app/home/{{news.id}}">
-        {{news.title}}
+        {{news.description}}
       </ion-item>
 
     </ion-list>
